   Qt 4.7 and later. Where it was not returning a QApplication instance
   properly.

 * The ``playblastFolder`` settings is replaced with the ``output path``, which
   is more consistent.

 * Fixed output path in :class:`~oyProjectManager.models.environments.nukeEnv`

 * With Maya 2012, mayaEnv now sets the default image format to OpenEXR with
   ZIP compression.

v0.1.0
------

 * Updated houdiniEnv to filter out wedge nodes from the render nodes list,
   which was causing errors while setting the frame range limits.

 * houdiniEnv now replaces the render output path with relative to the $HIP
   environment variable.

 * nukeEnv now creates the full path of the current asset before saving it.

 * Added "EDIT" assetType to Nuke environment.

 * in :class:`~oyProjectManager.models.repository.Repository`
   some methods listed below has been renamed:
   
    * getProjectAndSequenceNameFromFilePath ->
      get_project_and_sequence_name_from_file_path
   
    * lastUser -> last_user
   
    * settingsDirPath -> settings_dir_path

 * changed the version numbering scheme back again to a normal version, relase
   scheme.

 * fixed houdiniEnv for negative frame ranges, previously it was giving wrong
   frame range info.

 * added a leading "/" to the texture path in mentalray texture files when
   replacing the external paths with the repository path environment
   variable.

 * removed the
   :meth:`~oyProjectManager.models.repository.Repository.get_settings_path`.

 * removed the
   :meth:`~oyProjectManager.models.repository.Repository.projectsFullPath`,
   use
   :meth:`~oyProjectManager.models.repository.Repository.server_path`
   instead.

 * Changed the :class:`~oyProjectManager.models.repository.Repository`
   inheritance, it is now an instance of the regular Python Object class
   instead of the :class:`~oyProjectManager.models.abstractClasses.Singleton`

 * :meth:`~oyProjectManager.models.repository.Repository._readUsers` renamed