@@ -310,7 +310,11 @@ class MayaEnvironment(abstractClasses.Environment):
             # set the render output to OpenEXR with zip compression
             dRG.setAttr('imageFormat', 51)
             dRG.setAttr('imfkey','exr')
-            mrG.setAttr("imageCompression", 4)
+            # check the maya version and set it if maya version is equal or
+            # greater than 2012
+            
+            if pm.versions.current() >= pm.versions.v2012:
+                mrG.setAttr("imageCompression", 4)
             
             # if the renderer is not registered this causes a _objectError
             # and the frame buffer to 16bit half
