@@ -21,7 +21,8 @@ v0.1.1
  * Fixed output path in :class:`~oyProjectManager.models.environments.nukeEnv`
 
  * With Maya 2012, mayaEnv now sets the default image format to OpenEXR with
-   ZIP compression.
+   ZIP compression. (updated, now checks the maya version and applies the
+   compression only if the maya versions is 2012 or higher)
 
 v0.1.0
 ------
